--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,85 +93,7 @@
 
       <h1>Projects</h1>
       <section class="projects-grid">
-        <div class="project-card">
-          <img src="/bitebuddies.jpg" alt="BiteBuddies" />
-          <h3>BiteBuddies</h3>
-          <p>
-            BiteBuddies connects people through food to ease transitions and reduce waste.
-            Users build virtual pantries with OCR-enabled receipt scanning and get recipe
-            suggestions. The iOS app in Swift communicates with a Flask API via RESTful
-            endpoints. The Flask API integrates Spoonacular for food classification and
-            manages user data.
-          </p>
-          <!-- Icon Links Container -->
-          <div class="icon-links">
-            <!-- GitHub Icon -->
-            <a
-              class="icon-link"
-              href="https://github.com/AyanJhunjhunwala/BiteBuddie"
-              target="_blank"
-              rel="noopener"
-            >
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
-                alt="GitHub Logo"
-              />
-            </a>
-            <!-- YouTube Icon -->
-            <a
-              class="icon-link"
-              href="https://www.youtube.com/watch?v=sJMMmCzp754&t=1s&ab_channel=MarielleInaBaumgartner"
-              target="_blank"
-              rel="noopener"
-            >
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"
-                alt="YouTube"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="project-card">
-          <img src="/bitebuddies.jpg" alt="BiteBuddies" />
-          <h3>BiteBuddies</h3>
-          <p>
-            BiteBuddies connects people through food to ease transitions and reduce waste.
-            Users build virtual pantries with OCR-enabled receipt scanning and get recipe
-            suggestions. The iOS app in Swift communicates with a Flask API via RESTful
-            endpoints. The Flask API integrates Spoonacular for food classification and
-            manages user data.
-          </p>
-          <!-- Icon Links Container -->
-          <div class="icon-links">
-            <!-- GitHub Icon -->
-            <a
-              class="icon-link"
-              href="https://github.com/AyanJhunjhunwala/BiteBuddie"
-              target="_blank"
-              rel="noopener"
-            >
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
-                alt="GitHub Logo"
-              />
-            </a>
-            <!-- YouTube Icon -->
-            <a
-              class="icon-link"
-              href="https://www.youtube.com/watch?v=sJMMmCzp754&t=1s&ab_channel=MarielleInaBaumgartner"
-              target="_blank"
-              rel="noopener"
-            >
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"
-                alt="YouTube"
-              />
-            </a>
-          </div>
-        </div>
-
-        <div class="project-card">
+        <div class="project-card big-project">
           <img src="/bitebuddies.jpg" alt="BiteBuddies" />
           <h3>BiteBuddies</h3>
           <p>
@@ -210,6 +132,57 @@
           </div>
         </div>
         
+        
+        
+        <div class="project-card big-project">
+          <img src="/guitar.jpeg"/>
+          <h3>ChordWizard</h3>
+          <p>
+            ChordWizard is a real-time chord recognition system using OpenCV for video capture and a custom CNN model for finger-position-based chord identification. It integrates TensorFlow/Keras for deep learning, MediaPipe for hand tracking, and PyTorch for dataset preprocessing. Features include a chord progression trainer and a song request learner for guided practice. I am building a custom dataset and incorporating external training data to enhance accuracy across diverse playing styles.
+          </p>
+          <!-- Icon Links Container -->
+          
+          <h2>Looking for Collaborators</h2>
+        </div>
+        
+        <div class="project-card small-project">
+
+          <h3>Reddit Reviewer</h3>
+          <p>
+            This project leverages Beautiful Soup to scrape Reddit threads for real-life user experiences about specific products. The collected data is then processed using an optimized Hugging Face NLP model, allowing for accurate sentiment and topic analysis. Finally, the results are visualized to help users quickly gauge community opinions and make informed decisions.
+          </p>
+          <a
+              class="icon-link"
+              href="https://github.com/AyanJhunjhunwala/RedditReviewer"
+              target="_blank"
+              rel="noopener"
+            >
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
+                alt="GitHub Logo"
+              />
+            </a>
+        </div>
+        <div class="project-card small-project">
+          <img src="/monte.jpg"/>
+          <h3>Monte Carlo Options Pricing</h3>
+          <p>
+            Developed a Monte Carlo simulation in Python to price financial derivatives and assess risk metrics. Generated stochastic price
+paths for trending tickers, visualized price distributions, and calculated VaR & CVaR to quantify downside risks. Achieved pricing
+within 2% of expected outcomes
+          </p>
+          <a
+              class="icon-link"
+              href="https://github.com/AyanJhunjhunwala/optionspricing"
+              target="_blank"
+              rel="noopener"
+            >
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
+                alt="GitHub Logo"
+              />
+            </a>
+        </div>
       </section>
     </div>
   </main>
@@ -235,7 +208,7 @@
         </p>
       </div>
       <!-- Email Link -->
-      <a class="pill email-link" href="ajhujh1@uci.edu">
+      <a class="pill email-link" href="mailto:ajhunjh1@uci.edu">
         Get in Touch
       </a>
       <div class="pacman-container">
