--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -41,7 +41,7 @@ button {
   width: calc(100% + 80px);
   height: calc(100% + 80px);
   margin: -40px;
-  overflow: hidden;
+  overflow: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
