--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,7 +49,7 @@
     <main class="main">
       <div class="content">
         <section class="intro">
-          <img src="/prof.png" alt="Ayan's profile picture" class ="profile-pic" />
+          <img src="/prof1.png" alt="Ayan's profile picture" class ="profile-pic" />
           
           <!-- Typing container for main heading -->
           <div class="main-heading-container">
