fixed formatting added trackV

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -103,44 +103,7 @@
       <div class="content">
         <h1>Projects</h1>
         <section class="projects-grid">
-          <div class="project-card big-project">
-            <img src="/bitebuddies.jpg" alt="BiteBuddies" />
-            <h3>BiteBuddies</h3>
-            <p>
-              BiteBuddies connects people through food to ease transitions and reduce waste.
-              Users build virtual pantries with OCR-enabled receipt scanning and get recipe
-              suggestions. The iOS app in Swift communicates with a Flask API via RESTful
-              endpoints. The Flask API integrates Spoonacular for food classification and
-              manages user data.
-            </p>
-            <!-- Icon Links Container -->
-            <div class="icon-links">
-              <!-- GitHub Icon -->
-              <a
-                class="icon-link"
-                href="https://github.com/AyanJhunjhunwala/BiteBuddie"
-                target="_blank"
-                rel="noopener"
-              >
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
-                  alt="GitHub Logo"
-                />
-              </a>
-              <!-- YouTube Icon -->
-              <a
-                class="icon-link"
-                href="https://www.youtube.com/watch?v=sJMMmCzp754&t=1s&ab_channel=MarielleInaBaumgartner"
-                target="_blank"
-                rel="noopener"
-              >
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"
-                  alt="YouTube"
-                />
-              </a>
-            </div>
-          </div>
+          
           
           <div class="project-card big-project">
             <img src="/guitar.jpeg"/>
@@ -195,7 +158,44 @@
                 />
               </a>
           </div>
-          
+          <div class="project-card big-project">
+            <img src="/bitebuddies.jpg" alt="BiteBuddies" />
+            <h3>BiteBuddies</h3>
+            <p>
+              BiteBuddies connects people through food to ease transitions and reduce waste.
+              Users build virtual pantries with OCR-enabled receipt scanning and get recipe
+              suggestions. The iOS app in Swift communicates with a Flask API via RESTful
+              endpoints. The Flask API integrates Spoonacular for food classification and
+              manages user data.
+            </p>
+            <!-- Icon Links Container -->
+            <div class="icon-links">
+              <!-- GitHub Icon -->
+              <a
+                class="icon-link"
+                href="https://github.com/AyanJhunjhunwala/BiteBuddie"
+                target="_blank"
+                rel="noopener"
+              >
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"
+                  alt="GitHub Logo"
+                />
+              </a>
+              <!-- YouTube Icon -->
+              <a
+                class="icon-link"
+                href="https://www.youtube.com/watch?v=sJMMmCzp754&t=1s&ab_channel=MarielleInaBaumgartner"
+                target="_blank"
+                rel="noopener"
+              >
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg"
+                  alt="YouTube"
+                />
+              </a>
+            </div>
+          </div>
           <div class="project-card small-project">
             <img src="/monte.jpg"/>
             <h3>Monte Carlo Options Pricing</h3>
@@ -215,6 +215,14 @@
                   alt="GitHub Logo"
                 />
               </a>
+          </div>
+          <div class="project-card small-project">
+            <img src="/trackv.png"/>
+            <h3>TrackVest</h3>
+            <p>
+              Portfolio dashboard for tracking all types of investments.(stocks, crypto, real estate, etc.). Focusing on news based sentiment analysis and also with a special section on ESG for the average retail investor
+            </p>  
+            <h3>Looking for Contributors</h3>
           </div>
         </section>
       </div>
